#1358: Modifed Entity Entity Attribute UCs to accept either EntityRef or UUID as a parameter